test_suite/alan-2022-examples/failing/004870_mutation.alan
source O begin leave n := * m end
